Add new dictionary examples and patterns to the notebook

--- a/Day_01/03_Basic.ipynb
+++ b/Day_01/03_Basic.ipynb
@@ -6631,11 +6631,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fe8a032e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "BC\n",
+      "DEF\n",
+      "GHIJ\n",
+      "KLMNO\n",
+      "PQRSTU\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_want = int(input(\"Enter a number\"))\n",
+    "letter = 65\n",
+    "\n",
+    "for i in range(1, user_want + 1):\n",
+    "    for k in range(1, i + 1):\n",
+    "        print(f\"{chr(letter)}\", end=\"\")\n",
+    "        letter += 1\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3a37389",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ + + + + + + + \n",
+      "+             + \n",
+      "+             + \n",
+      "+             + \n",
+      "+             + \n",
+      "+             + \n",
+      "+             + \n",
+      "+ + + + + + + + \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Hollow Square Pattern\n",
+    "\n",
+    "user_input = int(input(\"Enter a number\"))\n",
+    "\n",
+    "for i in range(1, user_input + 1):\n",
+    "    for k in range(1, user_input + 1):\n",
+    "        if i == 1 or i == user_input or k == 1 or k == user_input:\n",
+    "            print(\"+\", end=\" \")\n",
+    "        else:\n",
+    "            print(\" \", end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b2f6b43b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              + \n",
+      "            + + \n",
+      "          + + + \n",
+      "        + + + + \n",
+      "      + + + + + \n",
+      "    + + + + + + \n",
+      "  + + + + + + + \n",
+      "+ + + + + + + + \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inverted and Rotated Half-Pyramid\n",
+    "\n",
+    "user_input = int(input(\"Enter a number\"))\n",
+    "\n",
+    "for i in range(1, user_input + 1):\n",
+    "    n = user_input - i\n",
+    "    for k in range(1, n + 1):\n",
+    "        print(\" \", end=\" \")\n",
+    "    for k in range(1, i + 1):\n",
+    "        print(\"+\", end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "df9a1c40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              + \n",
+      "            + + + \n",
+      "          + + + + + \n",
+      "        + + + + + + + \n",
+      "      + + + + + + + + + \n",
+      "    + + + + + + + + + + + \n",
+      "  + + + + + + + + + + + + + \n",
+      "+ + + + + + + + + + + + + + + \n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = int(input(\"Enter a number\"))\n",
+    "\n",
+    "for i in range(1, user_input + 1):\n",
+    "    # no of spaces decrease as the row no increases\n",
+    "    num_spaces = user_input - i\n",
+    "    for k in range(1, num_spaces + 1):\n",
+    "        print(\" \", end=\" \")\n",
+    "\n",
+    "    num_symbols = (2 * i) - 1\n",
+    "    for k in range(1, num_symbols + 1):\n",
+    "        print(\"+\", end=\" \")\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
